# dvub-rs

./: Cargo.toml  README.md  package.json
assets/: output.css  prism.css  prism.js
pages/: index.html  input.css
src/: handlers.rs  lib.rs  main.rs
templates/: base.html  index.html  input.css  posts.html
templates/components/: nav.html  post.html
templates/nav/: item.html
templates/posts/: first-post.html  test-post copy.html  test-post.html
templates/test/: test-post.html
test-templates/: test-post.html
