[package]
name = "htrx"
version = "0.1.0"
edition = "2021"

[dependencies]
tera = "1"
axum = "0.7.5"
notify = "6.1.1"
scraper = "0.19.1"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-livereload = "0.9.3"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.204", features = ["serde_derive"] }
