[package]
name = "htrx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["serde_derive"] }

# dependencies for live reloading
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-livereload = "0.9.3"
notify = "6.1.1"
# for diagnostics, etc.
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
# templating
tera = "1"
scraper = "0.19.1"
