[package]
name = "htrx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["serde_derive"] }

# dependencies for live reloading
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tower-livereload = "0.9.3"
notify = "6.1.1"
# scraping might look suspicious but trust me its only for parsing metadata from posts
scraper = "0.19.1"

# templating
tera = "1"
anyhow = "1.0.86"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
